<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="actor"
            type="com.movie.android.domain.ActorDetails" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".presentation.features.details.actordetails.ActorDetailsFragment">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="0dp"
                    android:layout_height="341dp"
                    android:layout_marginStart="@dimen/lMargin"
                    android:layout_marginEnd="@dimen/lMargin"
                    android:contentDescription="@string/description"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_placeholder" />

                <View
                    android:id="@+id/shadowViewBot"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_banner_shadow_bot"
                    app:layout_constraintBottom_toBottomOf="@+id/banner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/shadowViewLeft"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_banner_shadow_left"
                    app:layout_constraintBottom_toBottomOf="@+id/banner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/banner" />

                <View
                    android:id="@+id/shadowViewRight"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_banner_shadow_right"
                    app:layout_constraintBottom_toBottomOf="@+id/banner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{actor.name}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xxxlTextSize"
                    app:layout_constraintBottom_toBottomOf="@+id/banner"
                    app:layout_constraintEnd_toEndOf="@+id/banner"
                    app:layout_constraintStart_toStartOf="@+id/banner"
                    tools:text="Leonardo Dicaprio" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:layout_marginStart="@dimen/lMargin"
                    android:text="@string/biography"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xxlTextSize"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <TextView
                    android:id="@+id/textBiography"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/lMargin"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:layout_marginEnd="@dimen/lMargin"
                    android:text="@{actor.biography}"
                    android:textColor="@color/lightgray"
                    android:textSize="@dimen/xlTextSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:text="Follows the personal and professional lives of a group of doctors at Seattle’s Grey Sloan Memorial Hospital." />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:text="Known for"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xxlTextSize"
                    app:layout_constraintStart_toStartOf="@+id/textBiography"
                    app:layout_constraintTop_toBottomOf="@+id/textBiography" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerKnownFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:listitem="@layout/item_movie_horizontal" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/banner">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/xlMargin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/birthText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/lMargin"
                            android:text="@string/birthday"
                            android:textColor="@color/white"
                            android:textSize="@dimen/xlTextSize" />

                        <TextView
                            android:id="@+id/birthDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/mMargin"
                            android:text="@{actor.birthday}"
                            android:textColor="@color/yellow1"
                            android:textSize="@dimen/xlTextSize"
                            tools:text="1990-05-23" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/deathLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/xlMargin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/lMargin"
                            android:text="@string/deathday"
                            android:textColor="@color/white"
                            android:textSize="@dimen/xlTextSize"
                            app:layout_constraintStart_toStartOf="@+id/birthText"
                            app:layout_constraintTop_toBottomOf="@+id/birthText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/mMargin"
                            android:text="@{actor.expireDate()}"
                            android:textColor="@color/yellow1"
                            android:textSize="@dimen/xlTextSize"
                            app:layout_constraintBottom_toBottomOf="@+id/deathText"
                            app:layout_constraintStart_toEndOf="@+id/deathText"
                            app:layout_constraintTop_toTopOf="@+id/deathText"
                            tools:text="2008-05-10" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/xlMargin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/placeOfText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/lMargin"
                            android:text="@string/place_of_birth"
                            android:textColor="@color/white"
                            android:textSize="@dimen/xlTextSize" />

                        <TextView
                            android:id="@+id/placeOfBirth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/lMargin"
                            android:text="@{actor.place_of_birth}"
                            android:textColor="@color/yellow1"
                            android:textSize="@dimen/xlTextSize"
                            tools:text="Washington Dc" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/DarkProgressBar" />

    </FrameLayout>

</layout>
