<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="details"
            type="com.movie.android.domain.details.Details" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/detailbackground"
        tools:context=".view.fragment.DetailsFragment">


        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:alpha="0.6"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/picture" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/miniImage"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="@+id/banner"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            app:shapeAppearanceOverlay="@style/corneredImage"
            tools:srcCompat="@drawable/picture" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="32dp"
            android:text="@{details.original_title}"
            android:textColor="@color/white"
            android:textSize="@dimen/xxlTextSize"
            tools:text="Movie Title"
            app:layout_constraintStart_toEndOf="@+id/miniImage"
            app:layout_constraintTop_toTopOf="@+id/miniImage" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="15dp"
            android:text="@{details.release_date}"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/lTextSize"
            tools:text="Release Date"
            app:layout_constraintStart_toEndOf="@+id/miniImage"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


<!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:text="@{details.runtime}"-->
<!--            android:textColor="@color/lightgray"-->
<!--            android:textSize="@dimen/lTextSize"-->
<!--            tools:text="Duration"-->
<!--            app:layout_constraintStart_toEndOf="@+id/textView2"-->
<!--            app:layout_constraintTop_toTopOf="@+id/textView2" />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genreRecyclerView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            android:textSize="@dimen/xlTextSize"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            tools:listitem="@layout/item_genre_detail"
            tools:text="Adventure" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{details.overview}"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/xxlTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="Lorem ipsum dolor sit aedunt sem, quis fringilla mi tincidunt sit amet. Aenean vulputate tortor lorem, id blandit dolor pellentesque a. Curabitur diam leo. Nullam" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/overview"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/xxlTextSize"
            app:layout_constraintStart_toStartOf="@+id/miniImage"
            app:layout_constraintTop_toBottomOf="@+id/miniImage" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/similar_movies"
            android:textColor="@color/white"
            android:textSize="@dimen/xxxlTextSize"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/recommendation_movies"
            android:textColor="@color/white"
            android:textSize="@dimen/xxxlTextSize"
            app:layout_constraintStart_toStartOf="@+id/similarMovies"
            app:layout_constraintTop_toBottomOf="@+id/similarMovies" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similarMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="SpeakableTextPresentCheck"
            tools:listitem="@layout/item_similar" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendationMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:listitem="@layout/item_similar" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:indeterminate="true"
            android:theme="@style/DarkProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:numStars="5"
            android:isIndicator="true"
            android:stepSize="0.1"
            android:rating="@{details.voteAverage}"
            tools:rating="8.1"
            style="?android:attr/ratingBarStyleIndicator"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>